add radar to leftmenu

--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
                     </div>
                     <div class="inputs">
                         <input type="text" placeholder="نام کاربری" class="username-input">
-                        <i  id="icons"class="fas fa-user"></i>
+                        <i id="icons" class="fas fa-user"></i>
                         <input type="password" placeholder="رمز عبور" class="password-input">
-                        <i id="icons"class="fas fa-lock"></i>
+                        <i id="icons" class="fas fa-lock"></i>
                         <div class="security-div">
-                            <i id="refresh-icon"class="fas fa-sync-alt"></i>
+                            <i id="refresh-icon" class="fas fa-sync-alt"></i>
                             <img src="./Assets/PNG/securityImg.png" alt="securityCode" class="security-img">
-                            <i id="board-icon"class="far fa-keyboard"></i>
+                            <i id="board-icon" class="far fa-keyboard"></i>
                             <input type="text" placeholder="کد امنیتی" class="security-input">
 
 
                         </div>
                     </div>
                     <div class="button-div">
-                    <button class="submitButton">ورود</button>
-                </div>
+                        <button class="submitButton">ورود</button>
+                    </div>
                     <div class="remember-div">
-                        
-                        <input class="remember-checkbox"type="checkbox">
-                        
+
+                        <input class="remember-checkbox" type="checkbox">
+
                         <p class="remember-text">
                             مرا به خاطر بسپار
                         </p>
@@ -63,7 +63,22 @@
                 </div>
             </div>
         </div>
-        <div class="left-menu"></div>
+        <div class="left-menu">
+
+            <img class="logo-img"src="./Assets/PNG/Logo.png" alt="logo">
+            <div class="radar-circle"></div>
+            <div class="radar-circle2"></div>
+            <div class="radar-circle3"></div>
+            <div class="radar-circle4"></div>
+            <div class="radar-circle5"></div>
+            <div class="radar-circle6"></div>
+            <div class="radar-circle7"></div>
+            <div class="angel-div">
+                <img class="radar-angle"src="/Assets/PNG/radar-angle.png "alt="">
+            </div>
+
+
+        </div>
     </div>
     </div>
 
