radarimg src bug fixed

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="radar-circle6"></div>
             <div class="radar-circle7"></div>
             <div class="angel-div">
-                <img class="radar-angle" src="/Assets/PNG/radar-angle.png " alt="">
+                <img class="radar-angle" src="./Assets/PNG/radar-angle.png " alt="">
             </div>
             <img class="logo-img" src="./Assets/PNG/Logo.png" alt="logo">
             <div class="about-div">
